# vegetarions

./: .gitignore  README.md  analyse.ipynb  app.py  main.py  pyproject.toml  requirements.txt  run_tests.sh
.github/workflows/: ci.yaml
docs/: analyse.rst  conf.py  documentation.html  index.rst
docs/_static/: style.css
docs/htmlcov/: class_index.html  documentation.html  function_index.html  index.html  status.json  z_aff3404ed4669fbc_analyse_py.html  z_aff3404ed4669fbc_preprocess_py.html
src/modeles/: analyse.py  preprocess.py
tests/: test_analyse.py  test_app.py  test_preprocessing.py
