[tool.poetry]
name = "analyse des recettes végétariennes et véganes"
version = "0.1.0"
description = "Développeemnt d'une app streamlit pour l'analyse comparative entre type de recettes"
authors = ["Alfred Wande <awandewula@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "8.3.4"
pytest-cov = "6.0.0"
flake8 = "7.1.1"
black = "24.10.0"
sphinx = "8.1.3"
streamlit = "1.40.2"
poetry = "1.8.5"
pyfood = "^0.0.5"

[tool.poetry.group.dev.dependencies]
pandas = "2.2.3"
numpy = "2.2.0"
matplotlib = "3.9.3"
seaborn = "0.13.2"
scipy = "1.14.1"
statsmodels = "0.14.4"
nltk = "3.9.1"
scikit-learn = "1.6.0"
openpyxl = "3.1.5"
requests = "2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
